Add x2gbfs with deer config

--- a/.env.example
+++ b/.env.example
@@ -2,3 +2,8 @@ LAMASSU_VERSION_TAG=latest
 LAMASSU_PORT=8500
 LAMASSU_ADMIN_PORT=9002
 
+# x2gbfs variables
+X2GBFS_VERSION_TAG=latest
+DEER_API_URL=https://deer.fleetster.de
+DEER_USER=api_user@nvbw.de 
+DEER_PASSWORD=secret
