Extract LAMASSU_ADMIN_PASSWORD to .env

--- a/.env.example
+++ b/.env.example
@@ -1,6 +1,7 @@
 LAMASSU_VERSION_TAG=latest
 LAMASSU_PORT=8500
 LAMASSU_ADMIN_PORT=9002
+LAMASSU_ADMIN_PASSWORD=secret
 
 # x2gbfs variables
 X2GBFS_VERSION_TAG=latest
