Fix lamassu config issues

--- a/.env
+++ b/.env
@@ -27,4 +27,4 @@ DAGSTER_POSTGRES_PASSWORD=postgres_password
 DAGSTER_POSTGRES_DB=postgres_db
 
 # Pipeline variables
-IPL_LAMASSU_BASE_URL=lamassu:8080
+IPL_LAMASSU_BASE_URL=http://lamassu:8080
