--- a/etc/lamassu/application.properties
+++ b/etc/lamassu/application.properties
@@ -43,7 +43,7 @@ org.entur.lamassu.feedproviders=file:/etc/application-config/feedproviders.yml
 org.entur.lamassu.targetGbfsVersion=2.3
 
 ## Base URL for API (needed for URL transformations)
-org.entur.lamassu.baseUrl=http://localhost:8080
+org.entur.lamassu.baseUrl=http://10.70.172.11:8500
 
 ## Host / IP of internal load balancer for internal endpoints (Entur)
 org.entur.lamassu.internalLoadBalancer=http://localhost:8080
