--- a/etc/lamassu/feedproviders.yml
+++ b/etc/lamassu/feedproviders.yml
@@ -25,29 +25,30 @@ lamassu:
       codespace: DKY
       url: "https://stables.donkey.bike/api/public/gbfs/2/donkey_freiburg/gbfs.json"
       language: en
+      # Note: nextbike feeds are accessed via proxy, using http instead of https 
     - systemId: nextbike_df
       operatorId: NBK:Operator:nextbike
       operatorName: Nextbike
       codespace: NBK
-      url: "https://gbfs.nextbike.net/maps/gbfs/v2/nextbike_df/gbfs.json"
+      url: "http://gbfs.nextbike.net/maps/gbfs/v2/nextbike_df/gbfs.json"
       language: de
     - systemId: nextbike_fg
       operatorId: NBK:Operator:nextbike
       operatorName: Nextbike
       codespace: NBK
-      url: "https://gbfs.nextbike.net/maps/gbfs/v2/nextbike_fg/gbfs.json"
+      url: "http://gbfs.nextbike.net/maps/gbfs/v2/nextbike_fg/gbfs.json"
       language: de
     - systemId: nextbike_ds
       operatorId: NBK:Operator:nextbike
       operatorName: Nextbike
       codespace: NBK
-      url: "https://gbfs.nextbike.net/maps/gbfs/v2/nextbike_ds/gbfs.json"
+      url: "http://gbfs.nextbike.net/maps/gbfs/v2/nextbike_ds/gbfs.json"
       language: de
     - systemId: nextbike_vn
       operatorId: NBK:Operator:nextbike
       operatorName: Nextbike
       codespace: NBK
-      url: "https://gbfs.nextbike.net/maps/gbfs/v2/nextbike_vn/gbfs.json"
+      url: "http://gbfs.nextbike.net/maps/gbfs/v2/nextbike_vn/gbfs.json"
       language: de
       # Offenburg currently not available(?). Request sent to nextbike 2023-07-25
     #  - systemId: nextbike_dl
