--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -81,6 +81,11 @@ services:
       - DAGSTER_POSTGRES_USER
       - DAGSTER_POSTGRES_PASSWORD
       - DAGSTER_POSTGRES_DB
+      - IPL_LAMASSU_BASE_URL
+      - IPL_POSTGRES_PORT
+      - IPL_POSTGRES_DB
+      - IPL_POSTGRES_USER
+      - IPL_POSTGRES_PASSWORD
     depends_on:
         dagster_postgresql:
           condition: service_healthy
