--- a/etc/lamassu/application.properties
+++ b/etc/lamassu/application.properties
@@ -19,7 +19,7 @@ org.entur.lamassu.redis.slave.enabled=false
 #org.entur.lamassu.redis.slave.port=
 
 # graphql starter
-graphiql.enabled=true
+graphql.graphiql.enabled=true
 graphql.servlet.actuator-metrics=true
 graphql.servlet.corsEnabled=false
 
