--- a/.env
+++ b/.env
@@ -33,6 +33,9 @@ DAGSTER_POSTGRES_USER=postgres_user
 DAGSTER_POSTGRES_PASSWORD=postgres_password
 DAGSTER_POSTGRES_DB=postgres_db
 
+# Pipeline variables
+IPL_LAMASSU_BASE_URL=http://lamassu:8080
+
 # gtfs-db variables
 IPL_GTFS_DB_IMAGE=postgis/postgis:15-3.3-alpine
 IPL_GTFS_DB_POSTGRES_USER=postgres
@@ -48,3 +51,13 @@ IPL_GTFS_API_PUBLIC_BASE_URL=http://localhost:4000/
 
 # gtfs-swagger-ui variables
 IPL_GTFS_SWAGGER_UI_PORT=4001
+
+# Geoserver variables
+GEOSERVER_IMAGE=kartoza/geoserver:2.22.4--v2023.08.26
+GEOSERVER_PORT=8600
+GEOSERVER_DATA_DIR=/geoserver/data_dir
+GEOWEBCACHE_CACHE_DIR=/geoserver/cache_dir
+GEOSERVER_ADMIN_PASSWORD=admin
+GEOSERVER_ADMIN_USER=admin
+GEOSERVER_INITIAL_MEMORY=512M
+GEOSERVER_MAXIMUM_MEMORY=4G
