--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -131,6 +131,28 @@ services:
     healthcheck:
       test: "PGPASSWORD=${IPL_POSTGRES_PASSWORD} pg_isready -h 127.0.0.1 -U ${IPL_POSTGRES_USER} -d ${IPL_POSTGRES_DB}"
 
+  geoserver:
+    image: ${GEOSERVER_IMAGE}
+    volumes:
+      # TODO separate log/tmp/cache dirs from config dirs
+      - ./etc/geoserver/:/opt/geoserver/data_dir
+    ports:
+      - ${GEOSERVER_PORT}:8080
+    restart: on-failure
+    environment:
+      - GEOSERVER_ADMIN_PASSWORD=${GEOSERVER_ADMIN_PASSWORD}
+      - GEOSERVER_ADMIN_USER=${GEOSERVER_ADMIN_USER}
+      - INITIAL_MEMORY=${GEOSERVER_INITIAL_MEMORY}
+      - MAXIMUM_MEMORY=${GEOSERVER_MAXIMUM_MEMORY}
+    depends_on:
+      ipl_db:
+        condition: service_healthy
+    healthcheck:
+      test: "curl -fsS -o /dev/null -u '${GEOSERVER_ADMIN_USER}':'${GEOSERVER_ADMIN_PASSWORD}' http://localhost:8080/geoserver/rest/about/version.xml"
+      interval: 0m15s
+      timeout: 10s
+      retries: 15
+
   # This service runs the postgres DB used by dagster for run storage, schedule storage,
   # and event log storage.
   dagster-postgresql:
