--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -42,6 +42,13 @@ services:
 
   redis:
     image: redis
+    # Redis tries to use all memory it gets, and doesn't query the container's memory limit.
+    # see also https://stackoverflow.com/a/70779280
+    command: --maxmemory ${REDIS_MEMORY_MB:-256}mb
+    deploy:
+      resources:
+        limits:
+          memory: ${REDIS_MEMORY_MB:-256}M
 
   ipl_db:
       image: postgis/postgis:${IPL_POSTGIS_VERSION_TAG}
