--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -41,7 +41,7 @@ services:
       - ./var/gbfs/feeds:/var/gbfs/feeds
 
   redis:
-    image: redis
+    image: redis:6-alpine
     # Redis tries to use all memory it gets, and doesn't query the container's memory limit.
     # see also https://stackoverflow.com/a/70779280
     command: --maxmemory ${REDIS_MEMORY_MB:-256}mb
