add gtfs-db & gtfs-api services

--- a/.env
+++ b/.env
@@ -33,3 +33,14 @@ DAGSTER_POSTGRES_USER=postgres_user
 DAGSTER_POSTGRES_PASSWORD=postgres_password
 DAGSTER_POSTGRES_DB=postgres_db
 
+# gtfs-db variables
+IPL_GTFS_DB_POSTGIS_VERSION_TAG=15-3.3-alpine
+IPL_GTFS_DB_POSTGRES_USER=postgres
+IPL_GTFS_DB_POSTGRES_PASSWORD=password
+IPL_GTFS_DB_POSTGRES_DB=gtfs
+
+# gtfs-api variables
+IPL_GTFS_API_PORT=4000
+# todo
+# IPL_GTFS_API_PUBLIC_BASE_URL=https://ipl-dev.mobidata-bw.de/gtfs/
+IPL_GTFS_API_PUBLIC_BASE_URL=http://localhost:4000/
