--- a/.env.local.example
+++ b/.env.local.example
@@ -15,3 +15,5 @@ DEER_PASSWORD=
 # A random password which will be used for the postgresql database which is used by Dagster. Should be long and should not contain special
 # signs.
 DAGSTER_POSTGRES_PASSWORD=
+LAMASSU_DB_CONNECT_CLIENT_ID=
+LAMASSU_DB_CONNECT_API_KEY=
