lamassu: depend on redis being healthy

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -39,6 +39,9 @@ services:
     volumes:
       - ./etc/lamassu/:/etc/application-config/
       - ./var/gbfs/feeds:/var/gbfs/feeds
+    depends_on:
+        redis:
+          condition: service_healthy
 
   redis:
     image: redis:6-alpine
