--- a/.env
+++ b/.env
@@ -1,4 +1,4 @@
-TRANSFORMER_PROXY_VERSION_TAG=http-https
+TRANSFORMER_PROXY_IMAGE=ghcr.io/mobidata-bw/ipl-proxy:latest
 TRANSFORMER_PROXY_PORT=8400
 LAMASSU_VERSION_TAG=latest
 LAMASSU_PORT=8500
