lamassu: specify Docker repo in .env

--- a/.env
+++ b/.env
@@ -1,6 +1,8 @@
 TRANSFORMER_PROXY_IMAGE=ghcr.io/mobidata-bw/ipl-proxy:latest
 TRANSFORMER_PROXY_PORT=8400
-LAMASSU_VERSION_TAG=latest
+
+# TODO fix image name after repository has been choosen and CI is set up
+LAMASSU_IMAGE=mfdz/lamassu:latest
 LAMASSU_PORT=8500
 LAMASSU_ADMIN_PORT=9002
 LAMASSU_ADMIN_PASSWORD=secret
