ipl-db: specify Docker repo in .env

--- a/.env
+++ b/.env
@@ -8,7 +8,7 @@ LAMASSU_ADMIN_PORT=9002
 LAMASSU_ADMIN_PASSWORD=secret
 
 # postgis variables
-IPL_POSTGIS_VERSION_TAG=15-3.3-alpine
+IPL_POSTGIS_IMAGE=postgis/postgis:15-3.3-alpine
 IPL_POSTGRES_PORT=5432
 IPL_POSTGRES_DB=geoserver
 IPL_POSTGRES_USER=geoserver
