--- a/.env
+++ b/.env
@@ -15,7 +15,7 @@ IPL_POSTGRES_USER=geoserver
 IPL_POSTGRES_PASSWORD=geoserver
 
 # x2gbfs variables
-X2GBFS_VERSION_TAG=ci
+X2GBFS_IMAGE=ghcr.io/mobidata-bw/x2gbfs:latest
 DEER_API_URL=https://deer.fleetster.de
 DEER_USER=api_user@nvbw.de
 DEER_PASSWORD=secret
