--- a/.env
+++ b/.env
@@ -21,9 +21,9 @@ DEER_USER=api_user@nvbw.de
 DEER_PASSWORD=secret
 
 # dagster variables
-DAGSTER_POSTGRES_IMAGE_TAG=15.4-bullseye
-DAGSTER_PIPELINE_IMAGE_TAG=ci
-DAGSTER_IMAGE_TAG=ci
+DAGSTER_POSTGRES_IMAGE=postgres:15.4-bullseye
+DAGSTER_PIPELINE_IMAGE=ghcr.io/mobidata-bw/pipeline-code:latest
+DAGSTER_IMAGE=ghcr.io/mobidata-bw/pipeline-dagster:latest
 DAGSTER_POSTGRES_USER=postgres_user
 DAGSTER_POSTGRES_PASSWORD=postgres_password
 DAGSTER_POSTGRES_DB=postgres_db
