--- a/.env.local.example
+++ b/.env.local.example
@@ -9,9 +9,6 @@ LAMASSU_BASE_URL=http://10.70.172.11:8500
 LAMASSU_DB_CONNECT_CLIENT_ID=client
 LAMASSU_DB_CONNECT_API_KEY=secret
 
-# A random password which will be used for our central postgresql database. Should be long and should not contain special signs.
-IPL_POSTGRES_PASSWORD=
-
 # User and password from Deer
 DEER_USER=
 DEER_PASSWORD=
@@ -19,3 +16,11 @@ DEER_PASSWORD=
 # A random password which will be used for the postgresql database which is used by Dagster. Should be long and should not contain special
 # signs.
 DAGSTER_POSTGRES_PASSWORD=
+
+# variables needed by the `geoserver` service
+# Because the Geoserver doesn't read config variables from env vars, we mount this entire
+# file (`.env.local`) into it. Therefore, the following variables *cannot* be defined
+# elsewhere, but have to be defined (at least) in here!
+# todo: find a container-env-var-based solution to configure the Geoserver
+# A random password which will be used for our central postgresql database. Should be long and should not contain special signs.
+IPL_POSTGRES_PASSWORD=
