--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -136,6 +136,8 @@ services:
     volumes:
       # TODO separate log/tmp/cache dirs from config dirs
       - ./etc/geoserver/:/opt/geoserver/data_dir
+      # to provide env variables, see https://docs.geoserver.org/stable/en/user/datadirectory/configtemplate.html
+      - ./.env.local:/opt/geoserver/data_dir/geoserver-environment.properties
     ports:
       - ${GEOSERVER_PORT}:8080
     restart: on-failure
@@ -144,6 +146,9 @@ services:
       - GEOSERVER_ADMIN_USER=${GEOSERVER_ADMIN_USER}
       - INITIAL_MEMORY=${GEOSERVER_INITIAL_MEMORY}
       - MAXIMUM_MEMORY=${GEOSERVER_MAXIMUM_MEMORY}
+      # to provide env variables, see https://docs.geoserver.org/stable/en/user/datadirectory/configtemplate.html
+      # kartoza/geoserver maps PROXY_BASE_URL_PARAMETRIZATION to ALLOW_ENV_PARAMETRIZATION, see https://github.com/kartoza/docker-geoserver/blob/844c7a26acd1687358c821ea73117a721f25f7b6/scripts/entrypoint.sh#L72
+      - PROXY_BASE_URL_PARAMETRIZATION=true
     depends_on:
       ipl-db:
         condition: service_healthy
