Make logging profile env configurable

--- a/.env
+++ b/.env
@@ -61,3 +61,5 @@ GEOSERVER_ADMIN_PASSWORD=admin
 GEOSERVER_ADMIN_USER=admin
 GEOSERVER_INITIAL_MEMORY=512M
 GEOSERVER_MAXIMUM_MEMORY=4G
+# In prod, should switch to PRODUCTION_LOGGING. For other logging profiles see: https://docs.geoserver.org/stable/en/user/configuration/globalsettings.html#config-globalsettings-log-profile
+GEOSERVER_LOGGING_PROFILE=DEFAULT_LOGGING
