Use docker compose interpolation for LAMASSU_DB_CONNECT_CLIENT_ID
exit with an error message if LAMASSU_DB_CONNECT_CLIENT_ID unset

Co-authored-by: Jannis R <mail@jannisr.de>

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -78,7 +78,7 @@ services:
       - ${LAMASSU_PORT}:8080
       - ${LAMASSU_ADMIN_PORT}:9001
     environment:
-      LAMASSU_DB_CONNECT_CLIENT_ID: ${LAMASSU_DB_CONNECT_CLIENT_ID}
+      LAMASSU_DB_CONNECT_CLIENT_ID: ${LAMASSU_DB_CONNECT_CLIENT_ID:?'missing/empty env var $LAMASSU_DB_CONNECT_CLIENT_ID'}
       LAMASSU_DB_CONNECT_API_KEY: ${LAMASSU_DB_CONNECT_API_KEY}
       # depending on base image, JAVA_TOOL_OPTIONS must be used
       LAMASSU_BASE_URL: ${LAMASSU_BASE_URL}
