--- a/etc/traefik/traefik.yml
+++ b/etc/traefik/traefik.yml
@@ -13,6 +13,10 @@ entryPoints:
   # explicitly define an entrypoint `web` on port 80
   web:
     address: ":80"
+    http:
+      middlewares:
+        # don't sniff the mime type from the response body (will be removed in Traefik v3)
+        - no-mime-sniff@file
 
 accesslog:
   filePath: "/var/log/traefik/access.log"
