--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -11,6 +11,9 @@ services:
     ports:
       # todo: change to 80:80
       - "8080:80"
+      # todo: change to 8080:8080
+      # web UI, Prometheus, etc.
+      - "8081:8080"
     volumes:
       - ./etc/traefik:/etc/traefik
       - ./var/log/traefik:/var/log/traefik
