Extract LAMASSU_BASE_URL as env variable

--- a/.env
+++ b/.env
@@ -6,6 +6,7 @@ LAMASSU_IMAGE=mfdz/lamassu:latest
 LAMASSU_PORT=8500
 LAMASSU_ADMIN_PORT=9002
 LAMASSU_ADMIN_PASSWORD=secret
+LAMASSU_BASE_URL=http://lamassu:8080
 
 # postgis variables
 IPL_POSTGIS_IMAGE=postgis/postgis:15-3.3-alpine
@@ -29,5 +30,3 @@ DAGSTER_POSTGRES_USER=postgres_user
 DAGSTER_POSTGRES_PASSWORD=postgres_password
 DAGSTER_POSTGRES_DB=postgres_db
 
-# Pipeline variables
-IPL_LAMASSU_BASE_URL=http://lamassu:8080
